# resnnance

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/: resnnance-core.ipynb  resnnance.ipynb
src/resnnance/: __init__.py  populations.py  recording.py  simulator.py
src/resnnance/core/: __init__.py  compiler.py  core.py  layers.py  logger.py  model.py  plotter.py
src/resnnance/core/templates/: slave.vhd  template.vhd
src/resnnance/core/templates/accel/: sbus.vhd
src/resnnance/core/templates/hw/: engine.vhd  memory.vhd  network.vhd  simtick.vhd
src/resnnance/core/templates/hw/layers/: conv2d.vhd  conv2d_weights.vhd  dense.vhd  dense_weights.vhd  input.vhd  input_weights.vhd
src/resnnance/core/templates/hw/layers/conv2D/: conv2D_config.vhd  conv2D_core.vhd
src/resnnance/core/templates/hw/layers/conv2D/ctrl/: conv2D_ctrl.vhd
src/resnnance/core/templates/hw/layers/conv2D/npu/: conv2D_npu.vhd  conv2D_npu_aux.vhd
src/resnnance/core/templates/hw/layers/fc/: fc_config.vhd  fc_core.vhd
src/resnnance/core/templates/hw/layers/fc/ctrl/: fc_ctrl.vhd
src/resnnance/core/templates/hw/layers/fc/npu/: fc_npu.vhd  fc_npu_aux.vhd
src/resnnance/core/templates/hw/layers/input/: poisson_aux.vhd  poisson_core.vhd
src/resnnance/core/templates/hw/layers/pool/: pool_config.vhd  pool_core.vhd
src/resnnance/models/: cells.py
src/resnnance/pyNN/: __init__.py  builder.py  connectors.py  control.py  populations.py  projections.py  recording.py  simulator.py
src/resnnance/pyNN/models/: cells.py  synapses.py
tests/: resnnance.ipynb
(+3 files in other folders)
