[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resnnance"
version = "0.0.1"
authors = [
    { name = "Samuel López Asunción", email = "samuel.lopez.asuncion@upm.es"},
]
description = "An FPGA hardware accelerator generator for spiking neural networks + PyNN frontend"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy", "pyNN"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://repo-lsi.die.upm.es/slopez/resnnance"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"
