[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resnnance"
version = "0.0.3"
authors = [
    { name = "Samuel López Asunción", email = "samuel.lopez.asuncion@upm.es"},
]
description = "An FPGA hardware accelerator generator for spiking neural networks + PyNN frontend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy", "jinja2", "pyNN"
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://repo-lsi.die.upm.es/slopez/resnnance"
"Bug Tracker" = "https://repo-lsi.die.upm.es/slopez/resnnance/issues"
